# trendscout

./: .gitignore  membre de projet  rapport trend (1).odt  test_scraping.ps1
backend/: Modelfile.fashion  finetune_complete.py  finetune_model.py  pyproject.toml
backend/agents/: report_generator.py  sentiment_analyzer.py  trend_predictor.py  web_scout.py
backend/api/: main.py
backend/config/: prompts.py  settings.py
backend/data/: dataset_downloader.py  fashion_verbatims.json  finetuning_dataset.jsonl
backend/integrations/: __init__.py  ollama_analyzer.py
backend/scrapers/: __init__.py  review_scraper.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Dashboard.tsx  Logo.tsx  MetricCard.tsx  Navbar.tsx  TrendAnalyzer.tsx
frontend/app/contexts/: AuthContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
