[tool.poetry]
name = "trendscout-backend"
version = "0.1.0"
description = "Fashion trend forecasting"
authors = ["Team <team@trendscout.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
crewai = "^0.1.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
langchain-community = "^0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"