[project]
name = "trendscout"
version = "1.0.0"
description = "Fashion Trend Forecasting - Web Scraping + Hugging Face Fine-tuning + Ollama"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "httpx==0.25.0",
    "python-dotenv==1.0.0",
    "beautifulsoup4==4.12.0",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "datasets==2.15.0"
]